--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": false,
   "version": "1.0.7",
   "type": "module",
-  "main": "dist/select2-vue3.es.js",
-  "module": "dist/select2-vue3.es.js",
+  "main": "dist/select2-vue3.es.min.js",
+  "module": "dist/select2-vue3.es.min.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
